# Viz

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: baseline.sh
src/: Potential.py  model.py  prefix.py  prompts.py  sampler.py  vegalite.schema.json  visualize.py
tests/: dataset.csv
